--- a/module_labs_through_course/.vscode/tasks.json
+++ b/module_labs_through_course/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "0.1.0",
     "command": "tsc",
     "isShellCommand": true,
-    "args": ["-w", "-p", "."],
+    "args": ["-w", "-p", ".", "--pretty"],
     "showOutput": "always",
     "isBackground": true,
     "problemMatcher": "$tsc-watch"
